# hypothesis-sandbox

./: README.md  pyproject.toml
docs/: hypothesis_data_generation.md
src/: main.py
src/src/domain/: model.py
tests/: test_schema.py  test_valiation.py
